--- a/servo_controller/config/robot_controllers.yaml
+++ b/servo_controller/config/robot_controllers.yaml
@@ -3,7 +3,8 @@
 controller_manager:
   ros__parameters:
     update_rate: 50
-
+    use_sim_time: true
+    
 joint_state_broadcaster:
   ros__parameters:
     type: joint_state_broadcaster/JointStateBroadcaster
