--- a/servo_controller/config/robot_controllers.yaml
+++ b/servo_controller/config/robot_controllers.yaml
@@ -1,18 +1,21 @@
-# config/robot_controllers.yaml
-
 controller_manager:
   ros__parameters:
-    update_rate: 50
+    update_rate: 100  # Hz
     use_sim_time: true
-    
-joint_state_broadcaster:
-  ros__parameters:
-    type: joint_state_broadcaster/JointStateBroadcaster
-    publish_rate: 50
+
+    joint_trajectory_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
+      
+    position_controllers:
+      type: joint_trajectory_controller/JointTrajectoryController
+
 
 position_controllers:
   ros__parameters:
-    type: position_controllers/JointGroupPositionController
+    type: joint_trajectory_controller/JointTrajectoryController
     joints:
       - hip_fl
       - shoulder_fl
@@ -26,3 +29,7 @@ position_controllers:
       - hip_br
       - shoulder_br
       - knee_br
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
