--- a/servo_controller/config/robot_controllers.yaml
+++ b/servo_controller/config/robot_controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 100  # Hz
+    update_rate: 1000  # Hz
     use_sim_time: true
 
     joint_trajectory_controller:
@@ -15,7 +15,7 @@ controller_manager:
 
 position_controllers:
   ros__parameters:
-    type: position_controllers/JointGroupPositionController
+    # type: position_controllers/JointGroupPositionController
     joints:
       - hip_fl
       - shoulder_fl
